added swagger tags
